Fix navbar flag alignment

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -425,6 +425,7 @@ body {
 }
 
 .lang-flags {
+  margin-left: auto;
   display: flex;
   gap: 8px;
 }
